--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   provider: any
   shared_preferences: ^2.2.3
+  animated_bottom_navigation_bar: ^1.3.3
+
 
 dev_dependencies:
   flutter_test:
